# spoticast

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.agents/: AGENTS.md
docs/: deep-research-report.md
docs/agents/: job-specs.md  manager-interface-decision-reasonix.md  operating-model.md  performance-weights.md  recruitment-guide.md
docs/boss/: dashboard.md  market-benchmark.md  product-pivot.md  roadmap.md
docs/handoffs/: Background Spotify Transition Regression Handoff.md  Backup Chef Trial Brief.md  Blind Playback Fix Handoff.md  Blind Playback Fix Implementation Brief.md  Chef Continuity Handoff 2026-06-22.md  Chef Continuity Handoff 2026-06-23 (Opus — sharpen, pivot, tooling).md  Chef Continuity Handoff 2026-06-23.md  Chef Trial Brief.md  Commentary Loudness Normalization Handoff.md  Commentary Loudness Normalization Implementation Brief.md  Companion Direction Memory Use Product Review Handoff.md  Companion Memory Use Privacy Audit Handoff.md  Current Cast Library Placeholder Handoff.md  Dia TTS Trial Brief.md  Diagnostic Panel Toggle Handoff.md  Docs Reorganization by Audience Brief.md  Episode Library Navigation and Model Refresh Handoff.md  Episode Library Refresh After Generation Handoff.md  External Audio Balance and Replay Variety Audit Handoff.md  External Product UX Design Audit Brief.md  (+70 more)
resonova/: __main__.py  config.py  episodes.py  profile.py  server.py  variety.py
scripts/: migrate_to_per_user.py  run-rug-deepseek.ps1
spoticast/: server.py
tests/: test_profile.py  test_tts_failover.py  test_variety_episodes.py
(+78 files in other folders)
